fix YT_btn hover color contrast

--- a/styles/services.module.css
+++ b/styles/services.module.css
@@ -3,6 +3,10 @@
   align-items: center;
   column-gap: 2rem;
 }
+.yt__btn:hover{
+  background-color: red;
+  
+}
 
 @media only screen and (max-width: 992px) {
   .services__container {
